# repolatch

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  design-qa.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
apps/desktop/src/: WelcomeScreen.tsx  WorkspaceScreen.tsx  main.tsx  recentRepositories.test.ts  recentRepositories.ts  repositoryEntries.test.ts  repositoryEntries.ts  status.test.ts  status.ts  styles.css  workspaceTree.test.ts  workspaceTree.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/agentguard-cli/: Cargo.toml
crates/agentguard-cli/src/: main.rs
crates/agentguard-cli/tests/: cli.rs
crates/agentguard-core/: Cargo.toml
crates/agentguard-core/src/: error.rs  lib.rs  path.rs  session.rs
crates/agentguard-git/: Cargo.toml
crates/agentguard-git/src/: lib.rs
crates/agentguard-policy/: Cargo.toml
crates/agentguard-policy/src/: lib.rs  policy.rs  scanner.rs
crates/agentguard-policy/tests/: public_api.rs
crates/agentguard-receipt/: Cargo.toml
crates/agentguard-receipt/src/: lib.rs
crates/agentguard-runtime/: Cargo.toml
crates/agentguard-runtime/src/: lib.rs
crates/repolatch-cli/: Cargo.toml
crates/repolatch-cli/src/: main.rs
crates/repolatch-cli/tests/: cli.rs
crates/repolatch-core/: Cargo.toml
crates/repolatch-core/src/: capability.rs  error.rs  lib.rs  path.rs  session.rs
crates/repolatch-git/: Cargo.toml
crates/repolatch-git/src/: lib.rs
crates/repolatch-policy/: Cargo.toml
crates/repolatch-policy/src/: lib.rs  policy.rs  scanner.rs
crates/repolatch-policy/tests/: public_api.rs
crates/repolatch-receipt/: Cargo.toml
crates/repolatch-receipt/src/: lib.rs
crates/repolatch-runtime/: Cargo.toml
crates/repolatch-runtime/src/: lib.rs
docs/: architecture.md  backend-enforcement-matrix.md  launch-positioning.md  packaging.md  policy-reference.md  product-spec.md  release-packages.md  threat-model.md
docs/decisions/: 0001-mvp-scope.md
examples/: agentguard.toml  repolatch.toml
tests/fixtures/docker-e2e/: .env  repolatch.toml  safe.txt
tests/fixtures/git-repo/: visible.txt
