[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
repolatch-core = { path = "crates/repolatch-core" }
repolatch-policy = { path = "crates/repolatch-policy" }
repolatch-git = { path = "crates/repolatch-git" }
repolatch-runtime = { path = "crates/repolatch-runtime" }
repolatch-receipt = { path = "crates/repolatch-receipt" }
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
predicates = "3.1"
proptest = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
toml = "0.9"
uuid = { version = "1.17", features = ["serde", "v4"] }
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
strip = true
