[package]
name = "repolatch-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[lib]
name = "repolatch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
repolatch-core = { path = "../../../crates/repolatch-core" }
repolatch-policy = { path = "../../../crates/repolatch-policy" }
repolatch-git = { path = "../../../crates/repolatch-git" }
repolatch-runtime = { path = "../../../crates/repolatch-runtime" }
repolatch-receipt = { path = "../../../crates/repolatch-receipt" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting"] }

[workspace]

[dev-dependencies]
tempfile = "3"
